# robot_arm

./: README.md
Robot_description/launch/: controller.launch  controller.yaml  display.launch
Robot_description/meshes/: Idol_Gear_1.stl  Servo_Gear_1.stl  base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  link5_1.stl  link6_1.stl
Robot_description/urdf/: Robot.xacro
flutter_app/: pubspec.yaml
flutter_app/lib/: joint_command.dart  main.dart
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Robot_description/share/Robot_description/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prog_robot/lib/prog_robot/: move  pub_to_arduino
install/prog_robot/share/prog_robot/: package.bash  package.sh  package.xml  package.zsh
log/: latest_build  latest_test
ros2_ws_robot/frames/: frames_2023-07-29_11.43.38.gv  frames_2023-07-30_17.02.22.gv  frames_2023-07-30_17.12.13.gv
ros2_ws_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_robot/log/: latest_build  latest_list
ros2_ws_robot/src/Robot_description/: CMakeLists.txt
ros2_ws_robot/src/Robot_description/meshes/: link1_1.stl
ros2_ws_robot/src/prog_robot/: setup.py
ros2_ws_robot/src/prog_robot_cpp/: CMakeLists.txt  package.xml
ros2_ws_robot/src/prog_robot_cpp/launch/: move_cpp.launch.py
ros2_ws_robot/src/prog_robot_cpp/src/: frame_effector.cpp  hello_moveit.cpp  move.cpp  scene.cpp  transformation_matrix_calculator.cpp
ros2_ws_robot/src/robot_description/: CMakeLists.txt
ros2_ws_robot/src/robot_moveit_config/: .setup_assistant  package.xml
ros2_ws_robot/src/tictactoe/: setup.cfg  setup.py
src/Robot_description/meshes/: Idol_Gear_1.stl  Servo_Gear_1.stl  link4_1.stl  link5_1.stl  link6_1.stl
src/Robot_description/urdf/: Robot.xacro
src/prog_robot/: setup.cfg  setup.py
src/prog_robot/launch/: simu.launch.py
src/prog_robot/prog_robot/: angtostep.py  move.py
src/robot_moveit_config/config/: Robot.ros2_control.xacro  Robot.srdf  Robot.urdf.xacro
(+98 files in other folders)
